# mongo_db_project

./: .env example  Docker-compose.yml  Dockerfile.consumer  Dockerfile.fastapi  LICENSE  Makefile  Readme.md  pyproject.toml
.github/workflows/: lint.yml
docs/architecture/: sequence_send.plantuml  system_architecture.plantuml
src/consumer/: consumer.py
src/producer/: producer.py
src/utils/: logger.py  model.py  rabbitmq.py
