[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongo_db_project"
version = "0.1.0"
description = "My Docker-based mongo_db_project Python application"
authors = [{ name="Hariharan", email="tharanihari26@gmail.com" }]
dependencies = ["fastapi", "uvicorn[standard]", "pika", "pydantic", "pika", "pymongo"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"] # Example rule sets
# Add other configurations as needed